--- a/src/components/Login.astro
+++ b/src/components/Login.astro
@@ -5,39 +5,30 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
 ---
 
 <section
-  class="min-h-screen flex flex-col bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover"
+  class="min-h-screen flex flex-col bg-hero-gradient bg-center bg-cover"
 >
   <div
     class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center"
   >
     <h1
-      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-9 leading-tight"
+      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
     >
       <span class="text-white">Inicio de </span>
-      <span class="typing text-blue-600">sesión</span>
+      <span class="typing text-main">sesión</span>
     </h1>
 
-    <section>
+    <section class="w-full max-w-xl mx-auto px-8 py-12 bg-[#14272a]/30 rounded-xl backdrop-blur-sm mb-32">
       <div class="h-full">
         <div
-          class="flex h-full flex-wrap items-center justify-center lg:justify-between"
+          class="flex h-full flex-wrap items-center justify-center"
         >
-          <div
-            class="shrink-1 mb-12 grow-0 basis-auto md:mb-10 md:w-9/10 md:shrink-0 lg:w-6/12 xl:w-6/12"
-          >
-            <img
-              src="../../login.webp"
-              class="w-full md:w-80 lg:w-full xl:w-full"
-            />
-          </div>
-
-          <div class="-mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
+          <div class="w-full max-w-md">
             <form id="login">
               <div class="relative mb-6">
                 <input
                   name="username"
                   type="text"
-                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-blue-600 text-white placeholder:text-transparent"
+                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-main text-white placeholder:text-transparent"
                   id="username"
                   placeholder=" "
                 />
@@ -52,7 +43,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                 <input
                   name="password"
                   type="password"
-                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-blue-600 text-white placeholder:text-transparent"
+                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-main text-white placeholder:text-transparent"
                   id="password"
                   placeholder=" "
                 />
@@ -63,10 +54,10 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                 >
               </div>
 
-              <div class="text-center lg:text-left">
+              <div class="text-center">
                 <button
                   type="submit"
-                  class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-primary-3 transition-all duration-300 bg-blue-600 hover:bg-blue-800 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                  class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                 >
                   Iniciar sesión
                 </button>
