--- a/src/components/Register.astro
+++ b/src/components/Register.astro
@@ -4,88 +4,96 @@ import Footer from "./Footer.astro";
 const apiUrl = import.meta.env.ENDPOINT_REGISTER;
 ---
 
-<section class="min-h-[80vh] flex flex-col bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover">
-
-  <div class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
-    <h1 class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-9 leading-tight">
-      <span class="text-white">Crea una cuenta</span>
-      <span class="typing text-blue-600">y únete a nosotros</span>
+<section
+  class="min-h-screen flex flex-col bg-hero-gradient bg-center bg-cover"
+>
+  <div
+    class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center"
+  >
+    <h1
+      class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
+    >
+      <span class="text-white">Crea una </span>
+      <span class="typing text-main">cuenta</span>
     </h1>
 
-    <section>
+    <section class="w-full max-w-xl mx-auto px-8 py-12 bg-[#14272a]/30 rounded-xl backdrop-blur-sm mb-32">
       <div class="h-full">
-        <div class="flex h-full flex-wrap items-center justify-center lg:justify-between">
-          <div class="shrink-1 mb-6 grow-0 basis-auto md:mb-4 md:w-7/10 md:shrink-0 lg:w-5/12 xl:w-5/12">
-            <img
-              src="https://tecdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-              class="w-10/12 md:w-64 lg:w-10/12 xl:w-10/12 mx-auto"
-            />
-          </div>
-
-          <div class="-mb-12 md:mb-0 md:w-8/12 lg:w-5/12 xl:w-5/12">
+        <div
+          class="flex h-full flex-wrap items-center justify-center"
+        >
+          <div class="w-full max-w-md">
             <form id="register">
               <div class="relative mb-6">
                 <input
                   name="username"
                   type="text"
-                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-blue-600 text-white placeholder:text-transparent"
+                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-main text-white placeholder:text-transparent"
                   id="username"
                   placeholder=" "
                 />
                 <label
-                  for="email"
+                  for="username"
                   class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
-                >Nombre de usuario</label>
+                  >Nombre de usuario</label
+                >
               </div>
 
               <div class="relative mb-6">
                 <input
-                name="password"
+                  name="password"
                   type="password"
-                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-blue-600 text-white placeholder:text-transparent"
+                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-main text-white placeholder:text-transparent"
                   id="password"
                   placeholder=" "
                 />
                 <label
                   for="password"
                   class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
-                >Contraseña</label>
+                  >Contraseña</label
+                >
               </div>
 
               <div class="relative mb-6">
                 <input
                   name="confirmPassword"
                   type="password"
-                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-blue-600 text-white placeholder:text-transparent"
+                  class="peer block min-h-[auto] w-full rounded border-b-2 border-slate-400 bg-transparent px-3 py-[0.32rem] leading-[2.15] outline-none transition-all duration-200 ease-linear focus:border-b-2 focus:border-main text-white placeholder:text-transparent"
                   id="confirmPassword"
                   placeholder=" "
                 />
                 <label
                   for="confirmPassword"
                   class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
-                >Repetir Contraseña</label>
+                  >Repetir Contraseña</label
+                >
               </div>
 
-              <div class="text-center lg:text-left">
+              <div class="text-center">
                 <button
                   type="submit"
-                  class="hover:scale-105 inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-primary-3 transition-all duration-300 ease-in-out bg-blue-600 hover:bg-blue-800 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                  class="hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                 >
                   Registrarme
                 </button>
-                <p class="max-w-md mx-auto text-sm font-normal text-gray-500 m-5 mb-11">
-                  ¿Ya tienes una cuenta? <a href="/login" class="underline hover:text-white transition-all duration-500">Inicia sesión</a>
+                <p class="text-gray-500 m-5 mb-11">
+                  ¿Ya tienes una cuenta?
+                  <a
+                    href="/login"
+                    class="underline hover:text-white transition-all duration-500"
+                  >
+                    Inicia sesión
+                  </a>
                 </p>
               </div>
             </form>
           </div>
-
         </div>
       </div>
     </section>
   </div>
 
-  <footer class="w-full min-h-[20vh] mt-10">
+  <footer class="w-full min-h-[20vh] mt-auto">
     <Footer />
   </footer>
 </section>
