--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,12 @@
 <section
-  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#234d54] via-[#0b4650] to-[#06292f] bg-center bg-cover"
+  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover"
 >
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center">
     <h1
       class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-4 leading-tight"
     >
       <span class="text-white ">Bienvenid@ al</span>
-      <span class="typing text-[#e6ff2b]">Aula de Software Libre</span>
+      <span class="text-main">Aula de Software Libre</span>
 
     </h1>
     <p class="max-w-md mx-auto text-sm font-normal text-slate-300 mb-6">
