--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,16 +1,16 @@
 <section
-  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover bg-clip-padding"
+  class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover bg-clip-padding"
   aria-labelledby="main-title"
 >
   <div class="mx-auto max-w-5xl px-4 sm:px-6 lg:px-8 text-center">
     <h1 id="main-title" class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-4 leading-tight">
-      <span class="text-blue-600">Aula de Software Libre</span>
+      <span class="text-main">Aula de Software Libre</span>
       <br>
       <span class="text-white">FP Córdoba</span>
     </h1>
 
     <nav aria-label="Menú principal">
-      <ul class="flex flex-col md:flex-row justify-center text-white rounded-lg bg-[#0d0d30] m-4 md:m-20">
+      <ul class="flex flex-col md:flex-row justify-center text-white rounded-lg bg-[#14272a] m-4 md:m-20">
         <li>
           <a href="#" class="block rounded-lg hover:bg-slate-600 p-4 transition-all duration-300" aria-label="Ir a Talleres">
             Talleres 
@@ -34,18 +34,18 @@
       </ul>
     </nav>
 
-    <div class="bg-[#0d0d30] mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 py-8 rounded-lg mb-20">
+    <div class="bg-[#14272a] mx-auto max-w-3xl px-4 sm:px-6 lg:px-8 py-8 rounded-lg mb-20">
       <div class="flex flex-col md:flex-row items-center">
         <div class="flex gap-1 mb-4 md:mb-0" role="group" aria-label="Indicadores de estado">
           <span class="bg-red-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado crítico"></span>
           <span class="bg-yellow-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado de advertencia"></span>
           <span class="bg-green-500 inline-block w-3 h-3 rounded-full cursor-pointer" aria-label="Estado seguro"></span>
         </div>
-        <h2 class="text-2xl text-blue-600 mx-auto pr-12" id="about-aula">
+        <h2 class="text-2xl text-main mx-auto pr-12" id="about-aula">
           ¿Qué es el Aula de Software Libre?
         </h2>
       </div>
-      <hr class="my-4 border-t border-blue-600 w-full" />
+      <hr class="my-4 border-t border-main w-full" />
       <div class="card__content">
         <p class="text-white mb-4 text-center">
           En el Aula de Software Libre de la FP de Córdoba, nos dedicamos a fomentar el uso y desarrollo de herramientas tecnológicas basadas en software libre y de código abierto. Nuestro objetivo es proporcionar una formación práctica y accesible en tecnologías que permiten la colaboración y la innovación sin las restricciones de licencias privativas.
