--- a/src/layouts/LayoutLogin.astro
+++ b/src/layouts/LayoutLogin.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="bg-[#0d0d43]">
+<html lang="en" class="bg-[#14272a]">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
