--- a/src/pages/softwarelibre.astro
+++ b/src/pages/softwarelibre.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/LayoutPages.astro";
 </head>
 <body>
   <Layout title="Aula Software Libre - Software Libre">
-      <main class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-[#22235f] via-[#27286b] to-[#0d0d30] bg-center bg-cover bg-clip-padding">
+      <main class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover bg-clip-padding">
         <section>
           <ul class="flex mx-auto gap-8 text-slate-300">
             <li class="hover:scale-125 transition-all duration-500 hover:text-white "><a href="#definicion">Definición</a></li>
@@ -22,7 +22,7 @@ import Layout from "../layouts/LayoutPages.astro";
         <section class="grid grid-cols-1 place-items-center">
           <h1 class="text-white text-2xl md:text-5xl m-20 text-center" id="definicion">El software libre</h1>
           <div class="relative flex h-[20em] w-[30em] items-center justify-center rounded-[1.5em] bg-transparent p-[1.5em]">
-            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#1a1a2eaa] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
+            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#14272a] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
               <div class="flex h-full w-full flex-col justify-between p-[1.5em] font-nunito text-white">
                 <div class="flex flex-col justify-center">
                   <h1 class="text-[1.5em] font-bold leading-[0.8em]">Heading</h1>
@@ -40,7 +40,7 @@ import Layout from "../layouts/LayoutPages.astro";
         <section class="m-10">
           <h1 class="text-white text-2xl md:text-5xl m-20 text-center" id="herramientas">Herramientas</h1>
           <div class="relative flex h-[20em] w-[30em] items-center justify-center rounded-[1.5em] bg-transparent p-[1.5em]">
-            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#1a1a2eaa] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
+            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#14272a] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
               <div class="flex h-full w-full flex-col justify-between p-[1.5em] font-nunito text-white">
                 <div class="flex flex-col justify-center">
                   <h1 class="text-[1.5em] font-bold leading-[0.8em]">Heading</h1>
@@ -58,7 +58,7 @@ import Layout from "../layouts/LayoutPages.astro";
         <section class="mb-20 mt-0">
           <h1 class="text-white text-2xl md:text-5xl m-20 text-center" id="descargas">Descargas</h1>
           <div class="relative flex h-[20em] w-[30em] items-center justify-center rounded-[1.5em] bg-transparent p-[1.5em]">
-            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#1a1a2eaa] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
+            <div class="absolute left-1/2 top-1/2 flex h-[20em] w-[20em] md:w-[40em] lg:w-[60em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] shadow-lg bg-[#14272a] backdrop-blur-[6px] duration-[500ms]"> <!-- Cambiado el color de fondo -->
               <div class="flex h-full w-full flex-col justify-between p-[1.5em] font-nunito text-white">
                 <div class="flex flex-col justify-center">
                   <h1 class="text-[1.5em] font-bold leading-[0.8em]">Heading</h1>
